--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -6,7 +6,9 @@
     <title>Booking form</title>
 </head>
 <body> 
+<header>
 {{>header}}
+</header>
 <main>
 <section id="blue-container" class="booking-page-container">
     <legend><h1>Booking form</h1></legend>
@@ -40,7 +42,9 @@
     </form>
 </section>
 </main>
+<footer>
 {{>footer}}
+</footer>
 </body>
 </html>
 
