--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,6 +1,6 @@
 <header>
     <div id="header" class="header">
-        <a class="link-logo" aria-label="SynnySideSuncastle logo" href="/"><img id="logo" class="logo-header-footer" src="images/logo2.png"></a>
+        <a class="link-logo" aria-label="SunnySideSuncastle logo" href="/"><img id="logo" class="logo-header-footer" src="images/logo2.png"></a>
         <div class="right-side-header">
             <button id="toggle-high-contrast" aria-live="assertive" aria-atomic="true">High Contrast Mode is off</button>
             <a class="login-page-button link" href="/adminLogin">Admin Login</a>
