--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -15,25 +15,25 @@
         <fieldset class="fieldset">
             <div class="fields">
                 <lable for="userID">User ID:</lable>
-                <input class="userId txtField" type="text" aria-label="Id" name="userID" required><br>
+                <input class="userId txtField" type="text" aria-label="Id" placeholder="Id" name="userID" required><br>
 
                 <lable for="firstName">First Name:</lable>
-                <input class="firstName txtField" type="text" aria-label="First Name" name="firstName" required><br>
+                <input class="firstName txtField" type="text" aria-label="First Name" placeholder="First Name" name="firstName" required><br>
 
                 <lable for="lastName">Last Name:</lable>
-                <input class="lastName txtField" type="text" aria-label="Last Name" name="lastName" required><br>
+                <input class="lastName txtField" type="text" aria-label="Last Name" placeholder="Last Name" name="lastName" required><br>
 
                 <lable for="email">Email:</lable>
-                <input class="email txtField" type="text" aria-label="Email" name="email" required><br>
+                <input class="email txtField" type="text" aria-label="Email" placeholder="Email" name="email" required><br>
 
                 <lable for="phoneNumber">Phone Number:</lable>
-                <input class="phoneNumber txtField" type="text" aria-label="Phonenumber" name="phoneNumber" required><br>
+                <input class="phoneNumber txtField" type="text" aria-label="Phonenumber" placeholder="Phonenumber" name="phoneNumber" required><br>
 
                 <lable for="checkIn">Check-in Date:</lable>
-                <input class="checkIn txtField" type="text" aria-label="Check-in date in following order. Day, month, year. For example, 12, dot, 10, dot, 2013" name="checkIn" required><span>Example: 12.10.2013</span><br>
+                <input class="checkIn txtField" type="text" aria-label="Check-in date in following order. Day, month, year. For example, 12, dot, 10, dot, 2013" placeholder="DD.MM.YYY" name="checkIn" required><span>Example: 12.10.2013</span><br>
 
                 <lable for="checkOut">Check-Out  Date:</lable>
-                <input class="checkOut txtField" type="text" aria-label="Check-out date in following order. Day, month, year. For example, 20, dot, 10, dot, 2013" name="checkOut" required>Example: 20.10.2013<br>
+                <input class="checkOut txtField" type="text" aria-label="Check-out date in following order. Day, month, year. For example, 20, dot, 10, dot, 2013" placeholder="DD.MM.YYY" name="checkOut" required>Example: 20.10.2013<br>
             </div>
         </fieldset>    
         <button id="button" class="continue-button" type="submit" value="Submit user information" onclick="/thank-you">Submit</button>        
