--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -27,7 +27,7 @@
                 <input class="email txtField" type="text" aria-label="Email" placeholder="Email" name="email" required><br>
 
                 <lable for="phoneNumber">Phone Number:</lable>
-                <input class="phoneNumber txtField" type="text" aria-label="Phonenumber" placeholder="Phonenumber" name="phoneNumber" required><br>
+                <input class="phoneNumber txtField" type="text" aria-label="Phonenumber" placeholder="Phone Number" name="phoneNumber" required><br>
 
                 <lable for="checkIn">Check-in Date:</lable>
                 <input class="checkIn txtField" type="text" aria-label="Check-in date in following order. Day, month, year. For example, 12, dot, 10, dot, 2013" placeholder="DD.MM.YYY" name="checkIn" required><span>Example: 12.10.2013</span><br>
